--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
@@ -44,6 +45,8 @@
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-picker": "^4.0.4",
     "react-native-keychain": "6.2.0",
+    "react-native-modal": "^12.0.2",
+    "react-native-modal-datetime-picker": "^10.0.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "3.1.8",
